# Btrade

./: README.md  deneme.py  requirements.txt  setup.cfg
scripts/: webhook.php
src/: adapter.py  btrade-cli.py  btrade.py  configs.py  eventhandler.py  exception.py  facade.py  session.py  trade.py
src/btrade/: __main__.py  adapter.py  btrade.py  configs.py  exception.py  facade.py  session.py  trade.py
src/btrade/console/: clparser.py
src/btrade/wrappers/: kucoin.py
src/console/: clparser.py
src/wrappers/: kucoin.py
tests/: test_clparser.py  test_kucoin.py  test_trade.py
