[metadata]
name = brade
version = 0.0.1
author = Baturay Arslan
author_email = baturay_arslan_fb@hotmail.com
description = Automation tool for Future Trading.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BaturayArslan/Btrade
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir=
    =src
install_requires=      
    kucoin_futures_python         
    pytest
    responses
    watchdog

python_requires = >=3.7
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    btrade = btrade.btrade:main